@@ -107,6 +107,9 @@ Version 0.4.0 (2020/01/07)
   * Prior ProScan III controller
   * Prior filter wheels
   * Toptica iBeam laser
+  * Coherent Obis laser
+  * Zaber filter wheels
+  * Zaber filter cube turrets
 
 * Changes to device ABCs:
 
